--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+Header {
+	opacity: 0;
+	animation: fade-in 0.5s ease-in 0.5s;
+}
+
+.show-layout {
+	opacity: 1;
+}
+
+.fade-in-layout {
+	opacity: 0;
+	transition: 0.3s ease-in-out;
+}
+
+.show-layout {
+	.fade-in-layout {
+		opacity: 1;
+	}
 }
