--- a/src/Sections/Intro/Intro.css
+++ b/src/Sections/Intro/Intro.css
@@ -1,8 +1,35 @@
 .Intro {
-	display: flex;
-	flex-direction: column;
-	min-height: 700px;
-	height: 80vh;
-	justify-content: center;
-	row-gap: 40px;
+	.intro-video {
+		display: flex;
+		flex-direction: column;
+		min-height: 750px;
+		height: 80vh;
+		justify-content: center;
+		row-gap: 40px;
+		position: relative;
+		border-radius: 14px;
+		overflow: hidden;
+
+		#background-video {
+			/* position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: -10;
+		right: 0;
+		bottom: 0; */
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 100%;
+			height: 100%;
+			object-fit: cover; /* Ensures the video covers the div */
+			transform: translate(-50%, -50%);
+			z-index: -10;
+		}
+	}
+
+	.subheading {
+		margin-top: 120px;
+		margin-bottom: 120px;
+	}
 }
