--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 @tailwind utilities;
 
 :root {
-	--main-bg-color: #eed9e0;
+	/* --main-bg-color: #eed9e0; */
+	--main-bg-color: #faf8f8;
 	--primary-color: #00272b;
 	--white-color: #fff;
 }
@@ -43,7 +44,8 @@ code {
 .App {
 	margin: 0 auto;
 	/* max-width: 1700px; */
-	padding: 10px 40px;
+	margin-left: 40px;
+	margin-right: 40px;
 
 	/* @media screen and (min-width: 1700px) {
 		max-width: 1800px;
@@ -60,6 +62,11 @@ code {
 	@media screen and (max-width: 550px) {
 		margin: 0;
 	} */
+}
+
+.padding-y {
+	padding-left: 80px;
+	padding-right: 80px;
 }
 
 /* RESET */
