--- a/src/Sections/Intro/Intro.css
+++ b/src/Sections/Intro/Intro.css
@@ -2,7 +2,7 @@
 	position: relative;
 	z-index: 10;
 	padding-top: var(--header-hight);
-	
+
 	.intro-video {
 		display: flex;
 		flex-direction: column;
@@ -11,17 +11,11 @@
 		justify-content: center;
 		row-gap: 40px;
 		position: relative;
-		border-radius: 14px;
+		border-radius: var(--border-radius);
 		overflow: hidden;
 		color: #00272b;
 
 		#background-video {
-			/* position: absolute;
-		width: 100%;
-		height: 100%;
-		z-index: -10;
-		right: 0;
-		bottom: 0; */
 			position: absolute;
 			top: 50%;
 			left: 50%;
