--- a/src/Sections/Work/Work.css
+++ b/src/Sections/Work/Work.css
@@ -44,4 +44,12 @@
 			}
 		}
 	}
+
+	@media screen and (max-width: 1000px) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	@media screen and (max-width: 750px) {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
