Adding serif font to css work

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 	--padding-y: 40px;
 	--inner-padding-y: 80px;
 	--border-radius: 14px;
+	--font-serif: "DM Serif Display", serif;
 
 	/* Colors */
 	--color-light: 250, 248, 248;
