--- a/src/Sections/Work/Work.css
+++ b/src/Sections/Work/Work.css
@@ -23,17 +23,16 @@
 
 		h4 {
 			position: absolute;
-			top: 1vw;
-			left: 1vw;
-			font-size: 1.125rem;
-			line-height: 1.75rem;
-			font-weight: 700;
+			left: 20px;
+			top: 20px;
+			font-family: var(--font-serif);
+			font-size: 2vw;
 		}
 
 		.skills {
 			position: absolute;
-			bottom: 1vw;
-			left: 1vw;
+			bottom: 20px;
+			left: 20px;
 			text-transform: uppercase;
 			font-weight: 700;
 			font-size: 0.875rem;
@@ -47,9 +46,21 @@
 
 	@media screen and (max-width: 1000px) {
 		grid-template-columns: repeat(2, 1fr);
+
+		.project {
+			h4 {
+				font-size: 3vw;
+			}
+		}
 	}
 
 	@media screen and (max-width: 750px) {
 		grid-template-columns: repeat(1, 1fr);
+
+		.project {
+			h4 {
+				font-size: 7vw;
+			}
+		}
 	}
 }
