--- a/src/Sections/Services/Services.css
+++ b/src/Sections/Services/Services.css
@@ -11,9 +11,12 @@
 		display: flex;
 		flex-direction: column;
 		row-gap: 40px;
+		width: 100%;
 
 		p {
-			font-weight: 700;
+			font-weight: 400;
+            font-size: calc(16px + .5vw);
+            line-height: 1.5em;
 		}
 	}
 
