--- a/src/Sections/Header/Header.css
+++ b/src/Sections/Header/Header.css
@@ -6,7 +6,7 @@ header {
 	align-items: center;
 	position: fixed;
 	z-index: 20;
-	width: calc(100% - var(--padding-y) * 2);
+	width: calc(100% - var(--padding-x) * 2);
 
 	ul {
 		display: flex;
