--- a/src/Sections/Contact/Contact.css
+++ b/src/Sections/Contact/Contact.css
@@ -1,9 +1,11 @@
 .Contact {
-	display: flex;
-	flex-direction: column;
 	row-gap: 40px;
 	background-color: var(--bg-color-2);
 	border-radius: var(--border-radius);
 	padding: var(--inner-padding-x);
 	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 60px;
 }
