--- a/src/Sections/Services/Services.css
+++ b/src/Sections/Services/Services.css
@@ -1,31 +1,41 @@
 .Services {
-	column-gap: 80px;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 60px;
+
+	padding: 60px;
 	border-radius: var(--border-radius);
-	background-color: var(--bg-color-2);
-	padding: var(--inner-padding-x);
 
-	.service {
-		flex-grow: 1;
+	.services-group {
+		border-radius: var(--border-radius);
+		background-color: var(--bg-color-2);
+		padding: var(--inner-padding-x);
+		column-gap: 80px;
 		display: flex;
-		flex-direction: column;
-		row-gap: 40px;
-		width: 100%;
-
-		p {
-			font-weight: 400;
-            font-size: calc(16px + .5vw);
-            line-height: 1.5em;
-		}
-	}
-
-	@media screen and (max-width: 1000px) {
-		flex-direction: column;
-		row-gap: 80px;
+		flex-direction: row;
 
 		.service {
-			row-gap: 20px;
+			flex-grow: 1;
+			display: flex;
+			flex-direction: column;
+			row-gap: 40px;
+			width: 100%;
+
+			p {
+				font-weight: 400;
+				font-size: calc(16px + 0.5vw);
+				line-height: 1.5em;
+			}
+		}
+
+		@media screen and (max-width: 1000px) {
+			flex-direction: column;
+			row-gap: 80px;
+
+			.service {
+				row-gap: 20px;
+			}
 		}
 	}
 }
