--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,6 @@ Header {
 	}
 }
 
-App & * {
-	margin-left: 40px;
-	margin-right: 40px;
-}
-
 .section-header {
 	display: flex;
 	flex-direction: column;
@@ -47,4 +42,8 @@ App & * {
 		font-family: var(--font-serif);
 		line-height: 1.2em;
 	}
+}
+
+.page {
+	padding-top: var(--header-height);
 }
