--- a/src/Sections/Header/Header.css
+++ b/src/Sections/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-	height: var(--header-hight);
+	height: var(--header-height);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -12,12 +12,40 @@ header {
 		font-family: var(--font-serif);
 	}
 
-	ul {
+	nav {
 		display: flex;
 		flex-direction: row;
 		column-gap: 40px;
-		a {
-			text-decoration: none;
+
+		ul {
+			display: flex;
+			flex-direction: row;
+			column-gap: 40px;
+			a {
+				text-decoration: none;
+			}
+
+			li {
+				position: relative;
+
+				::after {
+					display: block;
+					width: 100%;
+					height: 3px;
+					content: " ";
+					bottom: -20px;
+					background-color: var(--text-accent);
+					width: 0;
+					transition: 0.2s ease-in-out;
+				}
+
+				&.current,
+				&:hover {
+					::after {
+						width: 100%;
+					}
+				}
+			}
 		}
 	}
 }
