--- a/src/Sections/Header/Header.css
+++ b/src/Sections/Header/Header.css
@@ -16,34 +16,28 @@ header {
 		display: flex;
 		flex-direction: row;
 		column-gap: 40px;
+		align-items: center;
 
-		ul {
-			display: flex;
-			flex-direction: row;
-			column-gap: 40px;
-			a {
-				text-decoration: none;
+		p {
+			position: relative;
+
+			::after {
+				display: block;
+				width: 100%;
+				height: 3px;
+				content: " ";
+				bottom: -20px;
+				background-color: var(--text-accent);
+				width: 0;
+				transition: 0.2s ease-in-out;
+				position: absolute;
+				bottom: -4px;
 			}
 
-			li {
-				position: relative;
-
+			&.current,
+			&:hover {
 				::after {
-					display: block;
 					width: 100%;
-					height: 3px;
-					content: " ";
-					bottom: -20px;
-					background-color: var(--text-accent);
-					width: 0;
-					transition: 0.2s ease-in-out;
-				}
-
-				&.current,
-				&:hover {
-					::after {
-						width: 100%;
-					}
 				}
 			}
 		}
