--- a/src/Sections/Intro.css
+++ b/src/Sections/Intro.css
@@ -2,13 +2,14 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 750px;
-	height: calc(100vh - var(--header-height) - var(--padding-x));
+	height: calc(100vh - (70px + 64px));
+	max-height: 1100px;
 	justify-content: center;
 	row-gap: 40px;
 	position: relative;
 	border-radius: var(--border-radius);
 	overflow: hidden;
-	color: #00272b;
+	color: var(--color-dark);
 	line-height: 1.1em;
 
 	h1 {
