--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,14 @@ Header {
 		border-bottom: 1px solid var(--text-color);
 	}
 }
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity .8s ease-in-out, transform .8s ease-in-out;
+
+	&.visible {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
