--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,9 @@ Header {
 }
 
 .fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity .8s ease-in-out, transform .8s ease-in-out;
+	opacity: 0;
+	transform: translateY(20px);
+	transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
 
 	&.visible {
 		opacity: 1;
