--- a/src/Sections/Intro2.css
+++ b/src/Sections/Intro2.css
@@ -7,7 +7,6 @@
 	justify-content: center;
 	row-gap: 20px;
 	border-radius: 16px;
-	background-color: #35222261;
 
 	.background-image {
 		position: absolute;
@@ -15,11 +14,10 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: url("./../../public/bg.png");
+		background-image: url("./../../public/bg.jpg");
 		background-size: cover;
 		background-position: center;
 		z-index: -1;
-		
 	}
 
 	h1 {
