--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 :root {
 	--border-radius: 14px;
-	--font-serif: "DM Serif Display", serif;
+	--font-serif: "Ethic Serif", serif;
 
 	/* Colors */
 	--color-light: #fbfaf4;
@@ -52,6 +52,20 @@
 }
 
 @layer components {
+	@layer base {
+		@font-face {
+			font-family: "Ethic Serif";
+			font-weight: 400;
+			src: url(/public/fonts/EthicSerif-Light.woff) format("woff");
+		}
+		@font-face {
+			font-family: "Ethic Serif";
+			font-weight: 400;
+			src: url(/public/fonts/EthicSerif-LightItalic.woff) format("woff");
+			font-style: italic;
+		}
+	}
+
 	.small-caps {
 		@apply uppercase font-bold tracking-wide text-sm;
 	}
@@ -87,12 +101,13 @@
 
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: var(--bg-color);
 	color: var(--text-color);
+	font-weight: 400;
 }
 
 .text-accent {
