--- a/src/Sections/Header.css
+++ b/src/Sections/Header.css
@@ -1,12 +1,13 @@
 header {
 	display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: sticky;
-    align-items: center;
-    top: 0;
-    z-index: 50;
-    height: 70px;
+	flex-direction: row;
+	justify-content: space-between;
+	position: sticky;
+	align-items: center;
+	top: 0;
+	z-index: 50;
+	height: 70px;
+	margin-bottom: -70px;
 
 	nav {
 		display: flex;
