--- a/src/Sections/Work.css
+++ b/src/Sections/Work.css
@@ -1,48 +1,46 @@
 .work {
-    position: relative;
-    box-sizing: border-box;
+	position: relative;
+	box-sizing: border-box;
 
-    .preview {
-        position: fixed;
-        width: 250px;
-        height: 250px;
-        overflow: hidden;
-        pointer-events: none;
-        transform-origin: center;
-        z-index: 2;
-        transition: .3s;
-        
-        .preview-img {
-            width: 100%;
-            height: 100%;
-            background: url('./../../public/sprite.png');
-            background-size: 250px;
-            background-position: 0 0;
-            pointer-events: none;
-            
-        }
-    }
-    
-    .work-container {
-        .projects {   
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
+	.preview {
+		position: fixed;
+		width: 300px;
+		height: 300px;
+		overflow: hidden;
+		pointer-events: none;
+		transform-origin: center;
+		z-index: 2;
 
-            .project {
-                display: flex;
-               justify-content: space-between;
-        
-               div {
-                padding: 34px 10px;
-                width: calc(100% /4);
-    
-                &:last-of-type {
-                    width: calc(100% / 12);
-                }
-               }
-            }
-        }
-    }
+		.preview-img {
+			width: 100%;
+			height: 100%;
+			background: url("./../../public/sprite.png");
+			background-size: 300px;
+			background-position: 0 0;
+			pointer-events: none;
+		}
+	}
+
+	.work-container {
+		.projects {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+
+			.project {
+				display: flex;
+				justify-content: space-between;
+
+				div {
+					padding: 42px 10px;
+					width: calc(100% / 4);
+
+					&:last-of-type {
+						width: calc(100% / 12);
+					}
+				}
+			}
+		}
+	}
 }
