--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,50 @@
 	}
 }
 
-.fade-in {
-	opacity: 0;
-	transform: translateY(20px);
-	transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+#intro {
+	 .intro-bg {
+		position: absolute;
+		/* top: 0;
+		left: 0;
+		height: 100svh;
+		width: 100svw;
+		filter: blur(50px);
+		z-index: -10; */
+	
+		.bg-shape {
+			position: absolute;
+			/* top: calc(50% - 35svh);
+			left: calc(50% - 50svw); */
+			
+		}
+	} 
 
-	&.visible {
-		opacity: 1;
-		transform: translateY(0);
-	}
+	 h1 {
+		
+		 line-height: 1.2;
+	} 
 }
+
+#parallax {
+	/* border:1px solid black; */
+	overflow: hidden;
+	height: 840px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	row-gap: 20px;
+	border-radius: 16px;
+  
+	.background-image {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 120%;
+	  background-image: url("./../public/cards.png");
+	  background-size: cover;
+	  background-position: center center;
+	  z-index: -1;
+	}
+  }
