--- a/src/App.css
+++ b/src/App.css
@@ -1,81 +1,100 @@
 .section-header {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 20px;
 
-	p {
-		letter-spacing: 0, 025em;
-		text-transform: uppercase;
-		font-weight: 700;
-		font-size: 0.875rem;
-		line-height: 1.25rem;
-	}
+  p {
+    letter-spacing: 0, 025em;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-size: 2em;
-		font-family: var(--font-serif);
-		line-height: 1.2em;
-	}
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 2em;
+    font-family: var(--font-serif);
+    line-height: 1.2em;
+  }
 }
 
 .packages-list {
-	border-top: 1px solid var(--text-color);
+  border-top: 1px solid var(--text-color);
 
-	.package-item {
-		border-bottom: 1px solid var(--text-color);
-	}
+  .package-item {
+    border-bottom: 1px solid var(--text-color);
+  }
 }
 
 #intro {
-	 .intro-bg {
-		position: absolute;
-		/* top: 0;
+  .intro-bg {
+    position: absolute;
+    /* top: 0;
 		left: 0;
 		height: 100svh;
 		width: 100svw;
 		filter: blur(50px);
 		z-index: -10; */
-	
-		.bg-shape {
-			position: absolute;
-			/* top: calc(50% - 35svh);
-			left: calc(50% - 50svw); */
-			
-		}
-	} 
 
-	 h1 {
-		
-		 line-height: 1.2;
-	} 
+    .bg-shape {
+      position: absolute;
+      /* top: calc(50% - 35svh);
+			left: calc(50% - 50svw); */
+    }
+  }
+
+  h1 {
+    line-height: 1.2;
+  }
 }
 
 #parallax {
-	/* border:1px solid black; */
-	overflow: hidden;
-	height: 840px;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	row-gap: 20px;
-	border-radius: 16px;
-  
-	.background-image {
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  width: 100%;
-	  height: 120%;
-	  background-image: url("./../public/cards.png");
-	  background-size: cover;
-	  background-position: center center;
-	  z-index: -1;
-	}
+  /* border:1px solid black; */
+  overflow: hidden;
+  height: 840px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+  border-radius: 16px;
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120%;
+    background-image: url("./../public/cards.png");
+    background-size: cover;
+    background-position: center center;
+    z-index: -1;
   }
+}
+
+#work {
+  .preview {
+    position: fixed;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    pointer-events: none;
+    transform-origin: center;
+    z-index: 2;
+
+    .preview-img {
+      width: 100%;
+      height: 100%;
+      background: url("./../../public/sprite.png");
+      background-size: 300px;
+      background-position: 0 0;
+      pointer-events: none;
+    }
+  }
+}
