--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,62 @@
 #header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	position: sticky;
-	align-items: center;
-	top: 0;
-	z-index: 50;
-	height: 70px;
-	margin-bottom: -70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: sticky;
+  align-items: center;
+  top: 0;
+  z-index: 50;
+  height: 70px;
+  margin-bottom: -70px;
 
-	nav {
-		display: flex;
-		flex-direction: row;
-		column-gap: 40px;
-		align-items: center;
+  nav {
+    display: flex;
+    flex-direction: row;
+    column-gap: 40px;
+    align-items: center;
 
-		p {
-			position: relative;
+    p {
+      position: relative;
 
-			::after {
-				display: block;
-				width: 100%;
-				height: 2px;
-				content: " ";
-				bottom: -20px;
-				background-color: var(--text-accent);
-				width: 0;
-				transition: 0.2s ease-in-out;
-				position: absolute;
-				bottom: -4px;
-			}
+      ::after {
+        display: block;
+        width: 100%;
+        height: 2px;
+        content: " ";
+        bottom: -20px;
+        background-color: var(--text-accent);
+        width: 0;
+        transition: 0.2s ease-in-out;
+        position: absolute;
+        bottom: -4px;
+      }
 
-			&.current,
-			&:hover {
-				::after {
-					width: 100%;
-				}
-			}
-		}
-	}
+      &.current,
+      &:hover {
+        ::after {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
-
 #intro {
-	.bg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: -10;
-		width: 100%;
-		height: calc(100vh + 50vh);
-		position: absolute;
-		background-image: url('./../public/bg.png');
-		background-size: cover;
-		background-repeat: no-repeat;
-		overflow: visible;
-		background-position: -20vw center;
-		opacity: var(--opacity);
-	}
-	
+  .bg {
+	transform: translateY(10vh);
+    background-image: url("./../public/bg.png");
+    top: 0;
+    left: 0;
+    z-index: -10;
+    width: 100%;
+    height: 110vh;
+    position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: visible;
+    background-position: center;
+    opacity: var(--opacity);
+  }
 
   h1 {
     line-height: 1.15;
